--- a/Sketcher.ipynb
+++ b/Sketcher.ipynb
@@ -63,7 +63,7 @@
       },
       "cell_type": "code",
       "source": [
-        "!wget 'https://raw.githubusercontent.com/zaidalyafeai/zaidalyafeai.github.io/master/sketcher/mini_classes.txt'"
+        "!wget 'https://raw.githubusercontent.com/clh7782/tfjs_sketcher/master/mini_classes.txt'"
       ],
       "execution_count": 1,
       "outputs": [
